add srcset to featured images, add styles for gists

--- a/_css/main.scss
+++ b/_css/main.scss
@@ -16,6 +16,7 @@
 			"modules/_lists.scss",
 			"modules/_tables.scss",
 			"modules/_media.scss",
+			"modules/_gists.scss",
 			"modules/_forms.scss",
 			"modules/_sections.scss",
 			"modules/_footer.scss",
